@@ -47,6 +47,7 @@ manager = component.get("ClassName")
 """
 from deluge import component
 import lib.newforms_plus as forms
+from lib.egg_handler import egg_handler
 from deluge.ui.client import aclient
 from deluge import component, pluginmanagerbase
 from deluge.configmanager import ConfigManager
@@ -186,6 +187,7 @@ class PluginApi(component.Component):
         import utils
         import lib.newforms_plus as forms
 
+        self.egg_handler = egg_handler
         self.render  = render
         self.web = web
         self.deco = deco
