@@ -1,0 +1,67 @@
+#!/usr/bin/env python
+#(c) Martijn Voncken, mvoncken@gmail.com
+#Same Licence as python 2.5
+#
+"""
+static fileserving for web.py
+without the need for wsgi wrapper magic.
+"""
+import web
+from web import url
+
+import posixpath
+import urlparse
+import urllib
+import mimetypes
+import os
+import datetime
+import cgi
+from StringIO import StringIO
+mimetypes.init() # try to read system mime.types
+import pkg_resources
+
+"""
+def get_resource(self, filename):
+    return pkg_resources.resource_filename("blocklist", os.path.join("data", filename))
+
+"""
+class egg_handler:
+    """
+    serves files directly from an egg
+    """
+    resource = "label"
+    base_path = "data"
+    extensions_map = mimetypes.types_map
+
+    def GET(self, path):
+        path = os.path.join(self.base_path, path)
+        ctype = self.guess_type(path)
+
+        data = pkg_resources.resource_string(self.resource,path)
+
+        web.header("Content-type", ctype)
+        web.header("Cache-Control" , "public, must-revalidate, max-age=86400")
+        #web.lastmodified(datetime.datetime.fromtimestamp(fs.st_mtime))
+        print data
+
+    def guess_type(self, path):
+        base, ext = posixpath.splitext(path)
+        if ext in self.extensions_map:
+            return self.extensions_map[ext]
+        ext = ext.lower()
+        if ext in self.extensions_map:
+            return self.extensions_map[ext]
+        else:
+            return 'application/octet-stream'
+
+if __name__ == '__main__':
+    #example:
+    class usr_static(egg_handler):
+        resource = "label"
+        base_path = "data"
+
+        base_dir = os.path.expanduser('~')
+    urls = ('/relative/(.*)','static_handler',
+                '/(.*)','usr_static')
+
+    web.run(urls,globals())
